--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongoose": "^8.14.0",
     "next": "15.1.3",
     "photoswipe": "^5.4.4",
     "react": "^19.0.0",
