--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/node": "22.15.3",
+    "@types/react": "19.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
