--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.87.1",
     "mongoose": "^8.14.0",
     "next": "15.1.3",
     "photoswipe": "^5.4.4",
